# ddc

./: CMakeLists.txt  Fonts.qrc  MainApp_L.qml  MainApp_P.qml  ZeroMQ _Installation.md  appinterface.cpp  appinterface.h  azure-pipelines.yml  images.qrc  main.cpp  main.qml  pr-validation.yml  qml.qrc
Components/: AppText.qml  CurvedRectangle.qml  FlatButton.qml  GaugeInfoBtn.qml  SafetyAreaBtn.qml  SafetyButton.qml  Splashscreen.qml
HMITestApp/: CMakeLists.txt  main.cpp  main.qml  zmqpublisher.cpp  zmqpublisher.h  zmqsubscriber.cpp  zmqsubscriber.h
Logger/include/: clogger.h  commonlib_global.h
Logger/src/: clogger.cpp
NextGenApp/: CMakeLists.txt  Doxyfile  README.md  generate_doxygen.sh  main.cpp
NextGenApp/docs/: DOXYGEN_GENERATION.md  README.md
NextGenApp/include/: appinterface.h  clogger.h  commonlib_global.h  constants.h
NextGenApp/qml/: MainApp_L.qml  MainApp_P.qml  images.qrc  main.qml  qml.qrc
NextGenApp/qml/Components/: AppText.qml  CurvedRectangle.qml  FlatButton.qml  GaugeInfoBtn.qml  SafetyButton.qml  Splashscreen.qml
NextGenApp/qml/Pages/: ActionDialog.qml  GaugesArea.qml  Menu.qml  NavigationBar.qml  SafetyArea.qml  TopBar.qml  TripInfoScreen.qml  WidgetsArea.qml
NextGenApp/qml/Pages/Widgets/: CameraView.qml  Climate.qml  DefaultRpmWidget.qml  DialogButton.qml  MachineInfo.qml  Radio.qml  RpmWidget.qml  TripInfo.qml
NextGenApp/qml/Singletons/: ScreenUtils.qml  Styles.qml
NextGenApp/src/: appinterface.cpp  clogger.cpp
NextGenApp/tests/: CMakeLists.txt  README.md  run_tests.sh  test_appinterface.cpp  test_clogger.cpp  test_helpers.cpp  test_logmessagecontext.cpp
Pages/: GaugesArea.qml  GuagesArea.qml  Menu.qml  NavigationBar.qml  SafetyArea.qml  TopBar.qml  WidgetsArea.qml
Pages/Widgets/: CameraView.qml  Climate.qml  MachineInfo.qml  Radio.qml  RpmWidget.qml  TripInfo.qml
Singletons/: IconMap.qml  Styles.qml
include/: appinterface.h  clogger.h  commonlib_global.h
qml/: images.qrc  main.qml
qml/Components/: CurvedRectangle.qml  FlatButton.qml  GaugeInfoBtn.qml  SafetyButton.qml
qml/Pages/: Menu.qml  NavigationBar.qml  TopBar.qml
qml/Pages/Widgets/: CameraView.qml  Climate.qml  MachineInfo.qml  Radio.qml  RpmWidget.qml
src/: appinterface.cpp  clogger.cpp
